# auto-labeler-labeler-helm

./: .gitignore  README.md  build.sh  deploy-manifest.yaml  deploy.sh  index.yaml  test-deploy.yaml  values.yaml
.github/: settings.yml
auto-labeler/: pyproject.toml  run_local.sh  setup_export.sh
auto-labeler/backend/: Dockerfile
auto-labeler/backend/app/: config.py  db.py  gcs.py  main.py  schemas.py  utils.py
auto-labeler/backend/app/routers/: __init__.py  batches.py  frames.py  tracks.py
auto-labeler/backend/auto_label_labeler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
auto-labeler/deploy/: entrypoint.sh  nginx.conf
auto-labeler/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
auto-labeler/frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
auto-labeler/frontend/src/components/: FrameViewer.tsx  Magnifier.tsx  TrackList.tsx  TrackSamples.tsx  TrackTimeline.tsx
auto-labeler/frontend/src/state/: useAppState.ts  useUserState.ts
auto-labeler/scripts/: README.md  export_via_api.py  ingest_batch.py
charts/auto-labeler-labeler/: Chart.yaml  README.md  values.yaml
charts/auto-labeler-labeler/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  gcs-secret.yaml  ingress.yaml  (+5 more)
charts/vision-dataset-curation/: Chart.yaml  README.md  values.yaml
docs/: auto-labeler-helm-plan.md
vdc/: .env.example  .gitignore  Dockerfile  WEB_APP_README.md  config.py  database.py  main.py  requirements.txt  storage.py
vdc/templates/: index.html
(+7 files in other folders)
