[project]
name = "auto-label-labeler"
version = "0.1.0"
description = "Annotation review tool backend and ingestion utilities"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "motor>=3.3",
    "pymongo>=4.8",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "click>=8.1",
    "google-cloud-storage>=2.17",
    "Pillow>=10.4",
    "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "mypy>=1.10",
    "ruff>=0.5",
    "httpx>=0.27"
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["backend*"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
